fixed java 21 methods